kubernetes/helm/beechart/test.yml
NAME: beehelm
LAST DEPLOYED: Sun Dec 24 14:05:28 2023
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
HOOKS:
MANIFEST:
---
# Source: beechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beehelm
  labels:
    helm.sh/chart: beechart-0.1.0
    app.kubernetes.io/name: beechart
    app.kubernetes.io/instance: beehelm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: beechart
    app.kubernetes.io/instance: beehelm
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: beechart
    app.kubernetes.io/instance: beehelm
---
# Source: beechart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beechart
  labels:
    helm.sh/chart: beechart-0.1.0
    app.kubernetes.io/name: beechart
    app.kubernetes.io/instance: beehelm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: beechart
      app.kubernetes.io/instance: beehelm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beechart
        app.kubernetes.io/instance: beehelm
    spec:
      containers:
        - name: beechart
          image: "mohamedbedier/beesens:1.1.2"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000 # Replace with your app's port
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 60 
            periodSeconds: 10
---
# Source: beechart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beechart
  labels:
    helm.sh/chart: beechart-0.1.0
    app.kubernetes.io/name: beechart
    app.kubernetes.io/instance: beehelm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "beechart.example.com"
      http:
        paths:
          - pathType: prefix
            path: /
            backend:
              service:
                name: beehelm
                port:
                  number: 3000

NOTES:
1. Get the application URL by running these commands:
  http://beechart.example.com/
